# CodeBase

./: .gitignore  package-lock.json  package.json
auth/: Cargo.toml  diesel.toml
auth/src/: db.rs  handlers.rs  main.rs  models.rs  musorka  schema.rs  tests_auth.rs
client/: package-lock.json  package.json
client/src/: index.css  main.tsx
client/src/api/: authApi.ts  commentsApi.ts  repoApi.ts
client/src/assets/: test_data.js
client/src/components/center_content/: CenterContent.tsx
client/src/components/code_editor/: CodeEditor.tsx
client/src/components/default_dashboard_component/: DefaultDashboardComponent.tsx
client/src/components/forms/: AuthForm.tsx
client/src/components/login/: Login.tsx
client/src/components/navbar/: Navbar.tsx  navbar.css
client/src/components/register/: Register.tsx
client/src/components/repo_content/: RepoContent.tsx  repoContent.css
client/src/components/repo_sidebar/: RepoSideBar.tsx  repoSideBar.css
client/src/context/: authApi.ts
client/src/pages/: AuthPage.tsx  Dashboard.tsx
comment_Services/: .env  package.json
comment_Services/comment_Services/: index.js
comment_Services/comment_Services/Database/: models.js
comment_Services/comment_Services/controllers/: controllers.js
comment_Services/comment_Services/middleware/: authMiddleware.js  generatortoken.js
comment_Services/controllers/: controllers.js
comment_Services/middleware/: authMiddleware.js  generatortoken.js
comment_Services/routes/: routes.js
newservice/: pom.xml
src/components/forms/: AuthForm.tsx
(+32 files in other folders)
