[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.0"
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
reqwest = "0.12.5"
sqlx = "0.8.3"
anyhow = "1.0.86"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
bcrypt = "0.16.0"
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono"] }
actix-cors = "0.7.0"
url = "2.5.4"

[dependencies.diesel_migrations]
version = "2.0"

[dev-dependencies]
actix-rt = "2"
actix-web = "4"